--- a/lab2/lab1.csproj
+++ b/lab2/lab1.csproj
@@ -16,4 +16,8 @@
   <ItemGroup>
     <ProjectReference Include="..\LR2.Services\LR2.Services.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\files\" />
+  </ItemGroup>
 </Project>
